<resources>
    <string name="app_name">TWOH Material Design</string>

    <string name="hello_world">TWOH Material Design Android</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="long_text">According to German scholar and Chopin biographer Frederick Niecks (1845–1924) Chopin said to his German pupil and copyist Adolph Gutmann (1819–1882) that he "had never in his life written another such beautiful melody (‘chant’); and on one occasion when Gutmann was studying it the master lifted his arms with his hands clasped and exclaimed: ‘O, my fatherland!’ ("O, me [sic] patrie!")"[4] Niecks writes that this study "may be reckoned among Chopin’s loveliest compositions" as it "combines classical chasteness of contour with the fragrance of romanticism."
    </string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="vibrant">Vibrant</string>
    <string name="vibrant_light">Vibrant Light</string>
    <string name="vibrant_dark">Vibrant Dark</string>
    <string name="muted">Muted</string>
    <string name="muted_light">Muted Light</string>
    <string name="muted_dark">Muted Dark</string>

    <string name="banner_ad_unit_id">ca-app-pub-6916955256570875/3486554156</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6916955256570875/6717266152</string>
    <string name="admob_app_id">ca-app-pub-6916955256570875~9533087755</string>
    <string name="title_activity_carousel">CarouselActivity</string>


</resources>
