<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        layout="@layout/view_readtutorialbutton"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/ivWallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="275dp"
                    android:src="@drawable/bg_face" />

                <TextView
                    android:id="@+id/tvVibrant"
                    style="@style/tvPalleteStyle"
                    android:layout_marginTop="10dp"
                    android:text="@string/vibrant" />

                <TextView
                    android:id="@+id/tvVibrantLight"
                    style="@style/tvPalleteStyle"
                    android:text="@string/vibrant_light" />

                <TextView
                    android:id="@+id/tvVibrantDark"
                    style="@style/tvPalleteStyle"
                    android:text="@string/vibrant_dark" />

                <TextView
                    android:id="@+id/tvMuted"
                    style="@style/tvPalleteStyle"
                    android:text="@string/muted" />

                <TextView
                    android:id="@+id/tvMutedLight"
                    style="@style/tvPalleteStyle"
                    android:text="@string/muted_light" />

                <TextView
                    android:id="@+id/tvMutedDark"
                    style="@style/tvPalleteStyle"
                    android:text="@string/muted_dark" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>